# smarticafe

./: .env.example  .gitignore  AGENTS.md  BACKUP_CHANGELOG.md  BACKUP_README.md  BRANCH_GUIDE.md  CHANGELOG.md  KNOWLEDGE_BASE.md  MEITUAN_FIX_GUIDE.md  QUICK_START_REFACTOR.md  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_READY.md  REFACTOR_SUMMARY.md  SECURE_RLS_WITH_SECRET.sql  SYNC_OPTIMIZATION_GUIDE.md  WORK_LOG.md  check_db.js  check_db.py  cleanup_and_restart.bat  cleanup_db.bat  cleanup_db_advanced.bat  index.html  network_test.js  one_click_command.ps1  one_click_start.txt  package-lock.json  package.json  quick_reset.bat  release_build.ps1  simulate_bootstrap.py  start_dev.bat  start_dev.ps1  start_dev_simple.ps1  tailwind.config.js  test_payload.json  todolist.md  vite.config.ts
.agent/: README.md
.kiro/: README.md
.sisyphus/: README.md
.windsurf/: README.md
docs/: AI_RULES.md  API.md  ARCHITECTURE.md  BACKUP_ROLLBACK.md  BACKUP_STATUS.md  CHANGELOG.md  DOCS_INDEX.md  INDEX.md  MODULES.md  MODULES_PLAN.md  PROJECT_STATUS.md  SETUP.md  SUPABASE_RLS.md  UI_DESIGN_SPEC.md  UI_DESIGN_SPECS.md  WORKFLOW.md
docs/collaborations/: BACKEND_LOG.md  (+4 more)
public/: splash.html
scripts/: auto-backup.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  check_db_state.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cipher.rs  constants.rs  db.rs  http_server.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: auth.rs  cloud.rs  coupons.rs  finance.rs  kv.rs  mod.rs  products.rs  sales.rs  system.rs
(+80 files in other folders)
